Replace resource types to resource (#5)
