# src/main/kotlin/com/hypto/iam/server/models/PolicyStatement.kt
@@ -14,12 +14,12 @@ package com.hypto.iam.server.models
 import java.io.Serializable
 /**
  *
- * @param resourceType
+ * @param resource
  * @param action
  * @param effect
  */
 data class PolicyStatement(
-    val resourceType: kotlin.String,
+    val resource: kotlin.String,
     val action: kotlin.String,
     val effect: PolicyStatement.Effect
 ) : Serializable {
